--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
 
 <body>
   <div class="card">
-    <h1>Hola, soy Batman 🦇</h1>
+    <h1>Para Balita Wayne 🦇</h1>
 
     <p>
-      Hice esto por que soy Batman,<br>
-      con el mejor intelecto.<br>
-      Y es uno de los regalos,<br>
-      espero lo leas!.
+      Hola Robin, este es un presente de Batman(yo),<br>
+      y realizado con programación, como te gusta.<br>
+      Son dos sorpresitas asi que tú,como simepre,<br>
+      solo dejate llevar!.
     </p>
 
-    <button onclick="abrirLibro()">Abre tu segunda sorpresa!</button>
+    <button onclick="abrirLibro()">Podrás averiguar quien lo mató?📖!</button>
 
     <div id="mensajeLibro" class="hidden">
       <p>
-        📖“La verdadera pregunta nunca fue quién lo mató,.<br>
-        sino todo lo que lo llevó hasta ahí.”📖.
+        Como siempre, yo, resolviendo, el mejor Batman que tendrás!.<br>
+        Soy un éxito! Pero aún hay más, sigue avanzando!.
       </p>
 
       <button onclick="descargarLibro()">Descargalo aquí!</button>
@@ -118,3 +118,4 @@
   </script>
 </body>
 </html>
+
