--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <p>
       Hola Robin, este es un presente de Batman(yo),<br>
       y realizado con programación, como te gusta.<br>
-      Son dos sorpresitas asi que tú,como simepre,<br>
+      Son dos sorpresitas asi que tú,como siempre,<br>
       solo dejate llevar!.
     </p>
 
@@ -81,8 +81,8 @@
 
     <div id="mensajeLibro" class="hidden">
       <p>
-        Como siempre, yo, resolviendo, el mejor Batman que tendrás!.<br>
-        Soy un éxito! Pero aún hay más, sigue avanzando!.
+        Como siempre, yo, resolviendo, el mejor Batman que tendrás!<br>
+        Soy un éxito! Pero aún hay más, sigue avanzando!
       </p>
 
       <button onclick="descargarLibro()">Descargalo aquí!</button>
@@ -94,7 +94,7 @@
         Mi trabajo interno, mis decisiones 🪨.
       </p>
 
-      <button onclick="verImagen()">Míralo aquí!</button>
+      <button onclick="verImagen()">Míralo tu futuro tattoo!</button>
     </div>
   </div>
 
@@ -118,4 +118,5 @@
   </script>
 </body>
 </html>
+
 
