--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
     }
   </script>
   <audio id="bgMusic" loop>
-    <source src="musica.mp3" type="audio/mpeg">
+    <source src="musica2.mp3" type="audio/mpeg">
   </audio>
 </body>
 </html>
+
 
 
 
