--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       music.volume = 0.3; // volumen suave
       music.play();
     
-      window.open("libro.pdf", "_blank");
+      window.open("librito.pdf", "_blank");
       document.getElementById("mensajeLibro").classList.remove("hidden");
     }
 
@@ -126,6 +126,7 @@
   </audio>
 </body>
 </html>
+
 
 
 
